# Defense_MultiAgent

./: Dockerfile  README.md  agent.py  blog.md  deploy.ps1  deploy_to_hf.py  fix_train.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  start.sh  train.py  train_colab.ipynb  train_space.py
agents/: __init__.py  actor_agent.py  orchestrator.py  radar_agent.py
data/: actor_eval.jsonl  actor_train.jsonl  radar_eval.jsonl  radar_train.jsonl
defense_env/: __init__.py  data_generator.py  environment.py  reward.py  tasks.py
server/: app.py  defense_environment.py
server/static/: index.html
tests/: test_env.py
train_space_docker/: Dockerfile  train_entry.sh
training/: __init__.py  dataset.py  grpo_trainer.py
